--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.37",
+    "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
